--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,8 +56,8 @@
                 </div>
 
                 <div class="image-container-sub program-to-detail clickable"
-                     th:data-programnum="${popularBoard.programNum}">
-                    <h4 th:text="${popularBoard.title}">프로그램 이름</h4>
+                     th:data-boardnum="${popularBoard.boardnum}">
+                    <h4 th:text="${popularBoard.title}">게시판</h4>
                 </div>
             </article>
         </div>
