hover css 겹침 삭제

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
 <main>
     <section class="board-container">
         <div class="board-title">
-            <h2>인기 게시글</h2>
+            <h2>커뮤니티 인기 게시글</h2>
         </div>
 
         <div class="pBoard-container">
