--- a/src/main/resources/templates/jk/list.html
+++ b/src/main/resources/templates/jk/list.html
@@ -41,8 +41,8 @@
                 <!-- 체크아웃 날짜 선택 -->
                 <input type="date" aria-label="체크아웃 날짜">
 
-                <!-- 프로그램 입력란 -->
-                <input type="text" placeholder="프로그램 검색" aria-label="프로그램">
+                <!-- 홈스테이 입력란 -->
+                <input type="text" placeholder="홈스테이 검색" aria-label="홈스테이">
 
                 <!-- 검색 버튼 -->
                 <button type="submit" aria-label="검색">
