--- a/src/main/resources/templates/program/accept.html
+++ b/src/main/resources/templates/program/accept.html
@@ -79,7 +79,7 @@
 	</form>
 </div>
 	
-		<!--<h3>프로그램 정보</h3>
+		<!--<h3>홈스테이 정보</h3>
 		<tr>
 			<th>글번호</th>
 			<td style="width: 80px;" th:text="${program.programNum}"></td>
