--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -28,7 +28,7 @@
 
 <main>
 
-	<!-- 프로그램 설명 컨테이너-->
+	<!-- 홈스테이 설명 컨테이너-->
 	<div>
 		<div class="with-reservation-container">
 			<div class="reservation-left">
@@ -54,7 +54,7 @@
 
 				<div class="feature-container">
 					<div class="theme-print">
-						<h3>프로그램 테마</h3>
+						<h3>홈스테이 테마</h3>
 						<ul>
 							<li th:if="${programTag.active}">활동적</li>
 							<li th:if="${programTag.creative}">창의적</li>
