--- a/src/main/resources/templates/program/programReview.html
+++ b/src/main/resources/templates/program/programReview.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 <body>
-<h3 id="title">프로그램에 대한 후기를 작성해주세요!</h3>
+<h3 id="title">홈스테이에 대한 후기를 작성해주세요!</h3>
 <form th:action="@{/program/programReview}" method="post" enctype="multipart/form-data">
         <div>
             <input type="text" id="title" name="stars" placeholder="별점">
