--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -31,7 +31,7 @@
 
 				<div class="image-container-sub program-to-detail clickable"
 					 th:data-boardnum="${popularBoard.boardnum}">
-					<h4 th:text="${popularBoard.title}">프로그램 이름</h4>
+					<h4 th:text="${popularBoard.title}">홈스테이 이름</h4>
 				</div>
 			</article>
 		</div>
@@ -47,8 +47,8 @@
 				<!-- 지역 입력란 -->
 				<input type="text" placeholder="지역 검색" aria-label="지역">
 
-				<!-- 프로그램 입력란 -->
-				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
+				<!-- 홈스테이 입력란 -->
+				<input type="text" placeholder="홈스테이 검색" aria-label="홈스테이">
 
 				<!-- 검색 버튼 -->
 				<button type="submit" aria-label="검색">
@@ -78,7 +78,7 @@
 				</div>
 
 				<div class="image-container-sub board-to-detail clickable" th:data-boardnum="${board.boardnum}">
-					<h4 th:text="${board.title}">프로그램 이름</h4>
+					<h4 th:text="${board.title}">홈스테이 이름</h4>
 				</div>
 			</article>
 
