--- a/src/main/resources/templates/jk/test.html
+++ b/src/main/resources/templates/jk/test.html
@@ -22,7 +22,7 @@
 
 
 <main>
-	<h2>프로그램 글쓰기</h2>
+	<h2>홈스테이 글쓰기</h2>
 
 	<form th:action="@{/program/write}" method="post" enctype="multipart/form-data">
 		<div>
