--- a/src/main/resources/templates/member/myReservation.html
+++ b/src/main/resources/templates/member/myReservation.html
@@ -49,7 +49,7 @@
 <body>
 
 
-	<h3 id="title">내가 신청한 프로그램</h3>
+	<h3 id="title">내가 신청한 홈스테이</h3>
 	<div class="container">
 		<div class="card" style="width: 18rem;" th:each="myReservation: ${myReservation}">
 			<img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
@@ -63,7 +63,7 @@
 						<span th:switch="${myReservation.status}">
 							<p th:case="0">예약이 확인 대기 중입니다.</p>
 							<p th:case="1">예약이 확인되었습니다.</p>
-							<p th:case="2">프로그램 종료  <a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}" 
+							<p th:case="2">홈스테이 종료  <a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}"
 						class="btn btn-primary">리뷰 작성하기</a></p>
 							<p th:case="*">오류</p>
 						</span>
@@ -76,7 +76,7 @@
 
 
 
-	<!--<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}" th:text="프로그램리뷰"></a> 
+	<!--<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}" th:text="홈스테이리뷰"></a>
 <a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}" th:text="호스트리뷰"></a> 
 
  <h3>내 게스트 리뷰</h3>
