--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -31,7 +31,7 @@
 
 
 <main>
-    <h2>프로그램 작성</h2>
+    <h2>홈스테이 작성</h2>
 
     <form th:action="@{/program/write}" method="post" enctype="multipart/form-data">
         <div>
@@ -77,9 +77,9 @@
         <hr>
 
         <div class="checklist-container">
-            <!-- 프로그램 테마 태그 -->
+            <!-- 홈스테이 테마 태그 -->
             <div>
-                <h3>프로그램 테마</h3>
+                <h3>홈스테이 테마</h3>
                 <label><input type="checkbox" name="active" value="1">활동적</label>
                 <label><input type="checkbox" name="creative" value="1">창의적</label>
                 <label><input type="checkbox" name="healing" value="1">힐링</label>
