--- a/src/main/resources/static/css/main/reviewWrite.css
+++ b/src/main/resources/static/css/main/reviewWrite.css
@@ -71,55 +71,30 @@
   }
   
   /*//////////////////////////////////////////////////*/
-  .blind {
-  position: absolute;
-  overflow: hidden;
-  margin: -1px;
-  padding: 0;
-  width: 1px;
-  height: 1px;
-  border: none;
-  clip: rect(0, 0, 0, 0);
+  
+ #myform fieldset{
+    display: inline-block;
+    direction: rtl;
+    border:0;
 }
-
-.startRadio {
-  display: inline-block;
-  overflow: hidden;
-  height: 40px;
-  &:after {
-    content:  '★';
-    display: block;
-    position: relative;
-    z-index: 10;
-    height: 40px;
-   
-    background-size: contain;
-    pointer-events: none;
-  }
-  &__box {
-    position: relative;
-    z-index: 1;
-    float: left;
-    width: 20px;
-    height: 40px;
+#myform fieldset legend{
+    text-align: right;
+}
+#myform input[type=radio]{
+    display: none;
+}
+#myform label{
+    font-size: 3em;
+    color: transparent;
+    text-shadow: 0 0 0 #f0f0f0;
     cursor: pointer;
-    input {
-      opacity: 0 !important;
-      height: 0 !important;
-      width: 0 !important;
-      position: absolute !important;
-
-      &:checked + .startRadio__img {
-        background-color: #ffcc00 ;
-      }
-    }
-  }
-  &__img {
-    display: block;
-    position: absolute;
-    right: 0;
-    width: 500px;
-    height: 40px;
-    pointer-events: none;
-  }
+}
+#myform label:hover{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+#myform label:hover ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+#myform input[type=radio]:checked ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
 }
