--- a/src/main/resources/templates/program/hostReview.html
+++ b/src/main/resources/templates/program/hostReview.html
@@ -7,7 +7,7 @@
 <title>게스트 후기 작성</title>
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-	<link rel="stylesheet" th:href="@{/css/main/reviewWrite.css}">
+<link rel="stylesheet" th:href="@{/css/main/reviewWrite.css}">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=IBM+Plex+Sans+KR:wght@300;400;600;700&family=Jua&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 	
@@ -38,20 +38,21 @@
 </div>
 <div class="items" style="margin-top: 40px;">
 	
-<form th:action="@{/program/hostReview}" method="post" enctype="multipart/form-data">
-    <div class="stars">
-        <input type="radio" id="star1" name="stars" value="1" />
-        <label for="star1"></label> 
-         <input type="radio" id="star2" name="stars" value="2" />
-        <label for="star2"></label> 
-        <input type="radio" id="star3" name="stars" value="3" />
-        <label for="star3"></label> 
-         <input type="radio" id="star4" name="stars" value="4" />
-        <label for="star4"></label>
-        <input type="radio" id="star5" name="stars" value="5" checked="checked"/>
-        <label for="star5"></label>    
-    </div>
-
+<form th:action="@{/program/hostReview}" id="myform"  method="post" enctype="multipart/form-data">
+     
+	<fieldset>
+		<span class="text-bold">별점을 선택해주세요</span>
+		<input type="radio" name="stars" value="5" id="rate1" checked><label
+			for="rate1">★</label>
+		<input type="radio" name="stars" value="4" id="rate2" ><label
+			for="rate2">★</label>
+		<input type="radio" name="stars" value="3" id="rate3" ><label
+			for="rate3">★</label>
+		<input type="radio" name="stars" value="2" id="rate4" ><label
+			for="rate4">★</label>
+		<input type="radio" name="stars" value="1" id="rate5"  ><label
+			for="rate5">★</label>
+	</fieldset>
     <div>
         <textarea name="content" placeholder="후기를 작성해주세요!"
         class="form-control" id="exampleFormControlTextarea1" rows="3" style="width: 20rem;"></textarea>
@@ -72,5 +73,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 		crossorigin="anonymous"></script>
+		 
 </body>
 </html>
