인기 글 링크

--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 
-				<div class="image-container-sub program-to-detail clickable"
+				<div class="image-container-sub board-to-detail clickable"
 					 th:data-boardnum="${popularBoard.boardnum}">
 					<h4 th:text="${popularBoard.title}">홈스테이 이름</h4>
 				</div>
