--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="image-container-sub program-to-detail clickable"
+                <div class="image-container-sub board-to-detail clickable"
                      th:data-boardnum="${popularBoard.boardnum}">
                     <h4 th:text="${popularBoard.title}">게시판</h4>
                 </div>
