인기 글 링크

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,6 +45,7 @@
     <section class="board-container">
         <div class="board-title">
             <h2>커뮤니티 인기 게시글</h2>
+            <div class="add_link"><a th:href="@{/board/boardList}">더보기</a></div>
         </div>
 
         <div class="pBoard-container">
