프로그램 후기

--- a/src/main/resources/templates/member/myReservation.html
+++ b/src/main/resources/templates/member/myReservation.html
@@ -66,7 +66,7 @@
 							<p th:case="2">프로그램 종료<br><br> <a
 									th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}"
 									class="btn btn-primary">호스트 리뷰</a>
-								<a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}"
+								<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}"
 									class="btn btn-primary">프로그램 리뷰</a>
 							</p>
 							<p th:case="*">오류</p>
