--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -69,11 +69,11 @@
 			<article class="image-article">
 				<div class="image-container">
 					<div class="image-wrapper">
-						<img th:src="@{/img/board/img_4.png}" alt="게시글 이미지">
+						<img th:src="${board.imagePath1}" alt="게시글 이미지1">
 					</div>
 
 					<div class="image-wrapper">
-						<img th:src="@{/img/board/img_5.png}" alt="게시글 이미지">
+						<img th:src="${board.imagePath2}" alt="게시글 이미지2">
 					</div>
 				</div>
 
