사진 라운딩 처리

--- a/src/main/resources/static/css/member/joinForm.css
+++ b/src/main/resources/static/css/member/joinForm.css
@@ -66,4 +66,5 @@ main input[type="button"]:hover {
 main img#preview {
     display: block;
     margin-top: 10px;
+    border-radius: 15px; /* 둥근 모서리 */
 }
