--- a/src/main/resources/static/css/main/home.css
+++ b/src/main/resources/static/css/main/home.css
@@ -96,6 +96,7 @@
     width: 100%;
     margin: 10px;
     position: relative;
+    border-radius: 15px; /* 둥근 모서리 */
 
 }
 
@@ -104,6 +105,7 @@
     display: block;
     padding-top: 75%; /* 16:9 비율 유지 */
     pointer-events: none;
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 .pBoard-article .image-container .image-wrapper img {
@@ -113,4 +115,5 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 15px; /* 둥근 모서리 */
 }
