--- a/src/main/resources/static/css/main/list.css
+++ b/src/main/resources/static/css/main/list.css
@@ -51,6 +51,7 @@
     margin: 10px;
     position: relative;
     width: 100%;
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 .board-card .image-container .image-wrapper::before {
@@ -58,6 +59,7 @@
     display: block;
     padding-top: 75%; /* 16:9 비율 유지 */
     pointer-events: none;
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 .board-card .image-container .image-wrapper img {
@@ -67,6 +69,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 /* Hover effect */
@@ -74,6 +77,7 @@
     transform: scale(1.1); /* 이미지를 확대 */
     z-index: 10; /* 확대된 이미지가 다른 이미지 위에 오도록 z-index 설정 */
     transition: transform 0.3s ease; /* 부드러운 transition 효과 */
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 
@@ -99,6 +103,7 @@
     overflow: hidden; /* Ensures the scaled image does not overflow the article bounds */
     position: relative; /* hover 시 z-index 적용을 위해 position 설정 */
     transition: transform 0.3s ease; /* Smooth transition for the transform effect */
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 /* 비율을 유지하기 위한 패딩 트릭 */
@@ -117,6 +122,7 @@
     height: 100%;
     object-fit: cover; /* 이미지 비율을 유지하면서 컨테이너를 채움 */
     transition: transform 0.3s ease; /* Smooth transition for the transform effect */
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 .board-card .card-content {
@@ -131,6 +137,7 @@
 .board-card .card-image:hover img {
     transform: scale(1.1); /* Enlarges the article on hover */
     z-index: 10; /* Ensure the scaled item is above others */
+    border-radius: 15px; /* 둥근 모서리 */
 }
 
 
