--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -48,6 +48,26 @@
                     <!-- 홈스테이 입력란 -->
                     <input type="text" name="searchWord" placeholder="홈스테이 검색" aria-label="홈스테이">
 
+                    <!-- Program Tag Selection -->
+                    <div class="program-tag-container">
+                        <label>프로그램 태그:</label>
+                        <div>
+                            <input type="checkbox" id="apartment" name="apartment" value="1">
+                            <label for="apartment">아파트</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="detached" name="detached" value="1">
+                            <label for="detached">단독주택</label>
+                        </div>
+                        <!-- Repeat for other tags -->
+                        <!-- Example for a thematic tag -->
+                        <div>
+                            <input type="checkbox" id="countryside" name="countryside" value="1">
+                            <label for="countryside">countryside</label>
+                        </div>
+                        <!-- ... more checkboxes for each tag ... -->
+                    </div>
+
                     <!-- 검색 버튼 -->
                     <button type="submit" onclick="showMessage()" aria-label="검색">
                         <span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
