--- a/src/main/resources/templates/program/request.html
+++ b/src/main/resources/templates/program/request.html
@@ -9,17 +9,17 @@
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
 	<title>예약현황</title>
-	
+
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=IBM+Plex+Sans+KR:wght@300;400;600;700&family=Jua&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
-	
+
 		body {
 			/*background-color: #e8e8e8;*/
 			font-family: 'IBM Plex Sans KR', sans-serif;
 		}
 
 		.container {
-			background-color: #f7f7cb;
+			background-color: #f8f9fa;
 			border: 1.5px solid #cfcfc6;
 			width: 80%;
 			height: auto;
@@ -37,6 +37,8 @@
 		.btn {
 			background-color: #1F9CB3;
 			border: none;
+			padding: 4px 8px;
+			font-size: 14px;
 		}
 
 		.btn:hover {
@@ -58,40 +60,44 @@
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
-<link rel="stylesheet" th:href="@{/css/main/home.css}">
-<link rel="stylesheet" th:href="@{/css/main/list.css}">
-
+	<link rel="stylesheet" th:href="@{/css/main/home.css}">
+	<link rel="stylesheet" th:href="@{/css/main/list.css}">
 </head>
 
 <body>
 	<header th:replace="layouts/header::header"></header>
 
 	<div class="container">
-		<h3>예약현황</h3> <hr>
-		<h4>(게스트리뷰</h4>
+		<h3>예약현황(리뷰작성칸넣기)</h3>
+		<hr>
+
 		<table>
-			<tr th:each="reservation: ${reservation}">
-				<th>프로그램 번호</th>
-				<td th:text="${reservation.programNum}"></td>
-				<td><a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" th:text="수락"  ></a>
-
-				</td>
-				<td th:text="${reservation.inputdate}"></td>
+			<tr>
+				<th>신청자</th>
+				<th>예약일자</th>
 				<th>예약상태</th>
+			</tr>
+			<tr th:each="reservation: ${reservation}">
 
+				<td th:text="${reservation.userid}">
+					<a th:if="${reservation.status == 0}" th:href="@{/program/accept(reserNum=${reservation.reserNum})}"
+						th:text="수락" class="btn btn-primary"></a>
+				</td>
+				<td th:text="${reservation.start_date+'~'}+${reservation.end_date}"></td>
 				<td th:switch="${reservation.status}">
-					<p th:case="0">예약이 확인 대기 중입니다.
-						<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" th:text="수락" class="btn btn-primary"></a>
-
+					<p th:case="0">대기 중
+						<a th:if="${reservation.status == 0}"
+							th:href="@{/program/accept(reserNum=${reservation.reserNum})}" th:text="수락"
+							class="btn btn-primary"></a>
 					</p>
-					<p th:case="1">예약이 확인되었습니다.</p>
+					<p th:case="1">예약 확정</p>
 					<p th:case="2">종료<a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}"
-							th:text="게스트리뷰작성하기"></a> </p>
-					<p th:case="3">리뷰작성 완료</p>
+							th:text="게스트리뷰작성하기"></a></p>
 					<p th:case="*">알 수 없는 상태입니다.</p>
 				</td>
 			</tr>
 		</table>
+
 
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
