--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -50,9 +50,17 @@
                     <input type="text" name="searchWord" placeholder="홈스테이 검색" aria-label="홈스테이"
                            th:value="${searchProgram.title}">
 
+                    <!-- 검색 버튼 -->
+                    <button type="submit" onclick="showMessage()" aria-label="검색">
+                        <span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
+                    </button>
+
+                    <!--태그 토글 버트-->
+                    <div id="toggleIcon" onclick="toggleTags()" style="cursor: pointer;">&#9660;</div>
+
                     <!-- Program Tag Selection -->
-                    <div class="program-tag-container">
-                        <label>프로그램 태그:</label>
+                    <div class="program-tag-container" style="display: none;">
+                        <label>프로그램 태그</label>
                         <div>
                             <input type="checkbox" id="apartment" name="apartment" value="1">
                             <label for="apartment">아파트</label>
@@ -70,11 +78,6 @@
                         </div>
                         <!-- ... more checkboxes for each tag ... -->
                     </div>
-
-                    <!-- 검색 버튼 -->
-                    <button type="submit" onclick="showMessage()" aria-label="검색">
-                        <span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
-                    </button>
                 </form>
             </div>
         </div>
