프로그램 검색 구현 - 태그 추가

--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -31,7 +31,7 @@
             <div class="search-bar">
                 <form method="get" th:action="@{/program/list}">
                     <!--태그 펼치기 버튼-->
-                    <span id="toggleIcon" style="cursor: pointer;">&#9660;</span>
+                    <span id="toggleIcon" style="cursor: pointer;">&#9660; 태그</span>
 
                     <!-- 지역 입력란 -->
                     <input type="text" name="address" placeholder="지역 검색" aria-label="지역"
